# rusty_boy

./: .gitignore  Cargo.toml  README.md  style.css
.github/workflows/: deploy.yml
apps/crossterm/: Cargo.toml
apps/crossterm/src/: main.rs
apps/python/: Cargo.toml  README.md  main.py  pyproject.toml
apps/python/src/: lib.rs
apps/web/: Cargo.toml  README.md  index.html
apps/web/res/: script.js
apps/web/src/: lib.rs
core/: Cargo.toml
core/src/: cpu.rs  gameboy.rs  gpu.rs  header.rs  keypad.rs  lib.rs  memory.rs  registers.rs  serial.rs  timer.rs
core/src/mbc/: mbc1.rs  mbc5.rs  mod.rs  no_mbc.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/search.desc/web/: web-desc-0-.js
doc/src/web/: lib.rs.html
doc/trait.impl/core/convert/: trait.From.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/trait.impl/wasm_bindgen/__rt/: trait.VectorIntoJsValue.js
doc/trait.impl/wasm_bindgen/convert/traits/: trait.FromWasmAbi.js  trait.IntoWasmAbi.js  trait.LongRefFromWasmAbi.js  trait.OptionFromWasmAbi.js  trait.OptionIntoWasmAbi.js  trait.RefFromWasmAbi.js  trait.RefMutFromWasmAbi.js  trait.TryFromJsValue.js  trait.VectorFromWasmAbi.js  trait.VectorIntoWasmAbi.js
doc/trait.impl/wasm_bindgen/describe/: trait.WasmDescribe.js  trait.WasmDescribeVector.js
doc/web/: all.html  index.html  sidebar-items.js  struct.RustyBoy.html
res/: worker.js
src/: lib.rs.old
