[package]
name = "rusty_boy_crossterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.19"
crossterm = { version = "0.28.1", features = ["events", "windows"] }
rusty_boy_core = { path = "../../core" }
