[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
rusty_boy_core = { path = "../../core" }
wasm-bindgen = "0.2.93"
wasm-bindgen-file-reader = "1.0.0"
js-sys = "0.3.70"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.70", features = [ "KeyboardEvent", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "ImageData", "File", "FileReader" ] }